--- a/info/task_description.html
+++ b/info/task_description.html
@@ -2,6 +2,7 @@
 
 <p>
     Crie uma função que receba dois números inteiros como parâmetros e retorne a soma desses números.
+    <img  title="example" src="{{MEDIA}}collatz.png" alt="example" style="max-height: 300px"/>
 </p>
 
 <!-- Explain input and output values -->
