--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,8 +1,8 @@
 <!-- Describe task in general -->
 
 <p>
-    ia de Collatz é definida como se segue: Começando com qualquer número inteiro positivo, se o número for par, o próximo número da sequência será o resultado da divisão por dois. Se o número for ímpar, o próximo número será o resultado da multiplicação por três e adição de um. O processo se repete até que a sequência chegue ao número um. Escreva uma função que, dado um número inteiro positivo, retorne a sequência de Collatz do número como uma lista.
-Entrada
+    A sequência de Collatz é definida como se segue: Começando com qualquer número inteiro positivo, se o número for par, o próximo número da sequência será o resultado da divisão por dois. Se o número for ímpar, o próximo número será o resultado da multiplicação por três e adição de um. O processo se repete até que a sequência chegue ao número um. Escreva uma função que, dado um número inteiro positivo, retorne a sequência de Collatz do número como uma lista.
+
 </p>
 <p style="text-align:center">
     <img  title="example" src="{{MEDIA}}collatz.jpeg" alt="example" style="max-height: 300px"/>
