--- a/info/task_description.html
+++ b/info/task_description.html
@@ -1,9 +1,10 @@
 <!-- Describe task in general -->
 
-<p>
-    A sequência de Collatz é definida como se segue: Começando com qualquer número inteiro positivo, se o número for par, o próximo número da sequência será o resultado da divisão por dois. Se o número for ímpar, o próximo número será o resultado da multiplicação por três e adição de um. O processo se repete até que a sequência chegue ao número um. Escreva uma função que, dado um número inteiro positivo, retorne a sequência de Collatz do número como uma lista.
 
-</p>
+<p><strong>Prática:</strong> Reforce o conhecimento adquirido. Aplique as técnicas aprendidas e repita os exercícios até se sentir confiante.</p>
+<h4>Enunciado</h4>
+<p>A sequência de Collatz é definida como se segue: Começando com qualquer número inteiro positivo, se o número for par, o próximo número da sequência será o resultado da divisão por dois. Se o número for ímpar, o próximo número será o resultado da multiplicação por três e adição de um. O processo se repete até que a sequência chegue ao número um. Escreva uma função que, dado um número inteiro positivo, retorne a sequência de Collatz do número como uma lista.</p>
+
 <p style="text-align:center">
     <img  title="example" src="{{MEDIA}}collatz.jpeg" alt="example" style="max-height: 300px"/>
 </p>
@@ -38,4 +39,8 @@ collatz_sequence(5) == [5, 16, 8, 4, 2, 1]
 </pre>
 {% endif %}
 </div>
-
+</div>
+<h4>Habilidades</h4>
+<ul><li>Controle de Fluxo e Iteração</li>
+<li>Acumulação de Valores</li>
+<li>Lógica de Condições e Decisões</li></ul>
