--- a/info/task_short_description.html
+++ b/info/task_short_description.html
@@ -1,1 +1,1 @@
-Gerar a sequência de Collatz de um número. [ [Controle de Fluxo e Iteração; Acumulação de Valores; Lógica de Condições e Decisões]
+Gerar a sequência de Collatz de um número. [Controle de Fluxo e Iteração; Acumulação de Valores; Lógica de Condições e Decisões]
